--- a/config/experiment.yaml
+++ b/config/experiment.yaml
@@ -1,6 +1,6 @@
 Device: "cuda"
 Project: "ASE389L"
-Task: "Test Obstacles"
-Save: "Oct 19"
+Task: "Obstacle Real Dynamics"
+Save: "Oct 22"
 Note: "None"
 Seed: 0
